//
//  ProtoTypealiases.swift

/* GENERATED CODE */

import Foundation

// MARK: - Proto+Typealiases

typealias Grade = Model_Grade
typealias Assignment = Model_Assignment
typealias TermGrade = Model_TermGrade
typealias Course = Model_Course
typealias Profile = Model_Profile
typealias DisabledInfo = Model_DisabledInfo
typealias ExtraInfo = Model_ExtraInfo
typealias Attendance = Model_Attendance
typealias StudentData = Model_StudentData
